--- a/config/3DUNetWithText_scannet_fcnet.yaml
+++ b/config/3DUNetWithText_scannet_fcnet.yaml
@@ -1,12 +1,12 @@
 GENERAL:
-  training_name: scene_level_with_text_refactored
+  training_name: scene_level_with_fcnet
   model_name: MultiLabelContrastive
 
 DATA:
   pointcloud_data:
     scale: 20 #Voxel size: 1/scale - 5cm
     val_reps: 1 # Number of test views, 1 or more
-    batch_size: 16
+    batch_size: 8
     elastic_deformation: False
   text_data:
     max_seq_len: 120
@@ -14,7 +14,7 @@ DATA:
 
 STRUCTURE:
   pointcloud_model:
-    name: SparseConvUNet
+    name: SparseConvFCNet
     m: 16 # 16 or 32
     residual_blocks: False #True or False
     block_reps: 1 #Conv block repetition factor: 1 or 2
@@ -29,4 +29,4 @@ STRUCTURE:
     TextContrastive: True
 
 Training:
-  epochs: 512
+  epochs: 1024
