--- a/config/3DUNetWithText_scannet_test.yaml
+++ b/config/3DUNetWithText_scannet_test.yaml
@@ -1,5 +1,5 @@
 GENERAL:
-  training_name: scene_level_with_fcnet_without_text
+  training_name: test
   model_name: MultiLabelContrastive
 
 DATA:
@@ -14,7 +14,7 @@ DATA:
 
 STRUCTURE:
   pointcloud_model:
-    name: SparseConvFCNet
+    name: SparseConvFCNetEncoder
     m: 16 # 16 or 32
     residual_blocks: False #True or False
     block_reps: 1 #Conv block repetition factor: 1 or 2
@@ -26,7 +26,7 @@ STRUCTURE:
     layers: 12
   loss: 
     Classification: True
-    TextContrastive: False
+    TextContrastive: True
 
 Training:
   epochs: 1024
