--- a/config/3DUNetWithText_scannet_fcnet_notextbaseline.yaml
+++ b/config/3DUNetWithText_scannet_fcnet_notextbaseline.yaml
@@ -1,6 +1,6 @@
 GENERAL:
-  training_name: scene_level_with_fcnet
-  model_name: MultiLabelContrastive
+  training_name: scene_level_with_fcnet_without_text
+  model_name: MultiLabel
 
 DATA:
   pointcloud_data:
@@ -8,10 +8,7 @@ DATA:
     val_reps: 1 # Number of test views, 1 or more
     batch_size: 8
     elastic_deformation: False
-  has_text: True
-  text_data:
-    max_seq_len: 120
-    cropped_texts: 10
+  has_text: False
 
 STRUCTURE:
   pointcloud_model:
@@ -19,15 +16,8 @@ STRUCTURE:
     m: 16 # 16 or 32
     residual_blocks: False #True or False
     block_reps: 1 #Conv block repetition factor: 1 or 2
-  text_model:
-    name: TextTransformer
-    width: 256
-    vocab_size: 49408
-    context_length: 120
-    layers: 12
   loss: 
     Classification: True
-    TextContrastive: False
 
 Training:
   epochs: 1024
