--- a/config/3DUNetWithText_scannet_fcnet_notextbaseline.yaml
+++ b/config/3DUNetWithText_scannet_fcnet_notextbaseline.yaml
@@ -8,6 +8,7 @@ DATA:
     val_reps: 1 # Number of test views, 1 or more
     batch_size: 8
     elastic_deformation: False
+  label: scene_level
   has_text: False
 
 STRUCTURE:
