--- a/config/3DUNetWithText_pseudolabel_notext.yaml
+++ b/config/3DUNetWithText_pseudolabel_notext.yaml
@@ -1,12 +1,12 @@
 GENERAL:
-  training_name: scene_level_with_fcnet_without_text
+  training_name: pseudo_generator
   model_name: MultiLabel
 
 DATA:
   pointcloud_data:
     scale: 20 #Voxel size: 1/scale - 5cm
     val_reps: 1 # Number of test views, 1 or more
-    batch_size: 1
+    batch_size: 8
     elastic_deformation: False
   label: scene_level
   has_text: False
@@ -15,12 +15,14 @@ STRUCTURE:
   pointcloud_model:
     name: SparseConvFCNet
     m: 16 # 16 or 32
-    residual_blocks: False #True or False
+    dimension: 3
+    full_scale: 4096
     block_reps: 1 #Conv block repetition factor: 1 or 2
+    residual_blocks: False #True or False
   loss: 
     Classification: True
   
 PSEUDO_LABEL:
   path: dataset/ScanNet/pseudo_label
   suffix: _pseudo_label.pth
-  threshold: 40
+  threshold: 30
