--- a/config/3DUNetWithText_scannet_fcnet_CLIP.yaml
+++ b/config/3DUNetWithText_scannet_fcnet_CLIP.yaml
@@ -1,5 +1,5 @@
 GENERAL:
-  training_name: test
+  training_name: scene_level_with_fcnet
   model_name: MultiLabelContrastive
 
 DATA:
@@ -16,18 +16,15 @@ DATA:
 
 STRUCTURE:
   pointcloud_model:
-    name: SparseConvFCNetEncoder
+    name: SparseConvFCNet
     m: 16 # 16 or 32
     dimension: 3
     full_scale: 4096
     block_reps: 1 #Conv block repetition factor: 1 or 2
     residual_blocks: False #True or False
   text_model:
-    name: TextTransformer
-    context_length: 120
-    width: 256
-    layers: 12
-    vocab_size: 49408
+    name: CLIPTransformer
+    clip_model_name: ViT-B/32
   loss: 
     Classification: True
     TextContrastive: True
