--- a/config/3DUNetWithText_scannet_fcnet_notextbaseline.yaml
+++ b/config/3DUNetWithText_scannet_fcnet_notextbaseline.yaml
@@ -15,8 +15,10 @@ STRUCTURE:
   pointcloud_model:
     name: SparseConvFCNet
     m: 16 # 16 or 32
-    residual_blocks: False #True or False
+    dimension: 3
+    full_scale: 4096
     block_reps: 1 #Conv block repetition factor: 1 or 2
+    residual_blocks: False #True or False
   loss: 
     Classification: True
 
