--- a/config/3DUNetWithText_scannet_scene_level.yaml
+++ b/config/3DUNetWithText_scannet_scene_level.yaml
@@ -18,14 +18,16 @@ STRUCTURE:
   pointcloud_model:
     name: SparseConvUNet
     m: 16 # 16 or 32
-    residual_blocks: True #True or False
+    dimension: 3
+    full_scale: 4096
     block_reps: 2 #Conv block repetition factor: 1 or 2
+    residual_blocks: True #True or False
   text_model:
     name: TextTransformer
-    width: 256
-    vocab_size: 49408
     context_length: 120
-    layers: 9
+    width: 256
+    layers: 12
+    vocab_size: 49408
   loss: 
     Classification: True
     TextContrastive: False
