--- a/config/3DUNetWithText_scannet_fcnet_with_pseudo.yaml
+++ b/config/3DUNetWithText_scannet_fcnet_with_pseudo.yaml
@@ -1,15 +1,15 @@
 GENERAL:
-  training_name: pseudo_with_fcnet_baseline_with_milloss
+  training_name: pseudo_with_fcnet_baseline_finer_with_milloss
   model_name: FullySupervised
 
 DATA:
   pointcloud_data:
-    scale: 20 #Voxel size: 1/scale - 5cm
-    val_reps: 1 # Number of test views, 1 or more
+    scale: 50 #Voxel size: 1/scale - 5cm
+    val_reps: 3 # Number of test views, 1 or more
     batch_size: 8
-    elastic_deformation: False
+    elastic_deformation: True
   label: pseudo
-  pseudo_label_path: dataset/ScanNet/pseudo_label/pseudo_generator_thresh30
+  pseudo_label_path: dataset/ScanNet/pseudo_label/pseudo_generator_thresh0.71
   pseudo_label_suffix: _pseudo_label.pth
   has_text: False
 
@@ -19,8 +19,8 @@ STRUCTURE:
     m: 16 # 16 or 32
     dimension: 3
     full_scale: 4096
-    block_reps: 1 #Conv block repetition factor: 1 or 2
-    residual_blocks: False #True or False
+    block_reps: 2 #Conv block repetition factor: 1 or 2
+    residual_blocks: True #True or False
   loss: 
     Classification: True
 
