--- a/config/3DUNetWithText_scannet_fcnet_CLIP.yaml
+++ b/config/3DUNetWithText_scannet_fcnet_CLIP.yaml
@@ -12,7 +12,7 @@ DATA:
   has_text: True
   text_data:
     max_seq_len: 120
-    cropped_texts: 10
+    # cropped_texts: 10
 
 STRUCTURE:
   pointcloud_model:
@@ -25,6 +25,7 @@ STRUCTURE:
   text_model:
     name: CLIPTransformer
     clip_model_name: ViT-B/32
+    width: 512
   loss: 
     Classification: True
     TextContrastive: True
