--- a/config/3DUNetWithText_scannet_fcnet_finer_uppool_decay.yaml
+++ b/config/3DUNetWithText_scannet_fcnet_finer_uppool_decay.yaml
@@ -1,5 +1,5 @@
 GENERAL:
-  training_name: scene_level_with_fcnet_finer_narrower
+  training_name: scene_level_with_fcnet_upPool_decay
   model_name: MultiLabel
 
 DATA:
@@ -13,7 +13,7 @@ DATA:
 
 STRUCTURE:
   pointcloud_model:
-    name: SparseConvFCNetNarrow
+    name: SparseConvFCNetDirectUpPool
     m: 16 # 16 or 32
     dimension: 3
     full_scale: 4096
@@ -23,4 +23,4 @@ STRUCTURE:
     Classification: True
 
 Training:
-  epochs: 1024
+  epochs: 512
