--- a/config/3DUNetWithText_scannet_test.yaml
+++ b/config/3DUNetWithText_scannet_test.yaml
@@ -1,29 +1,36 @@
 GENERAL:
-  training_name: subcloud_level_test
-  model_name: MultiLabel
+  training_name: test
+  model_name: MultiLabelContrastive
 
 DATA:
   pointcloud_data:
-    scale: 50 #Voxel size: 1/scale - 2cm
-    val_reps: 3 # Number of test views, 1 or more
-    batch_size: 30
-    elastic_deformation: True
-  label: subcloud
-  in_radius: 2
-  has_text: False
+    scale: 20 #Voxel size: 1/scale - 5cm
+    val_reps: 1 # Number of test views, 1 or more
+    batch_size: 8
+    elastic_deformation: False
+  label: scene_level
+  has_text: True
+  text_data:
+    max_seq_len: 120
+    cropped_texts: 10
 
 STRUCTURE:
   pointcloud_model:
-    name: SparseConvFCNetDirectUpPool
+    name: SparseConvFCNetEncoder
     m: 16 # 16 or 32
     dimension: 3
     full_scale: 4096
-    block_reps: 2 #Conv block repetition factor: 1 or 2
-    residual_blocks: True #True or False
+    block_reps: 1 #Conv block repetition factor: 1 or 2
+    residual_blocks: False #True or False
+  text_model:
+    name: TextTransformer
+    context_length: 120
+    width: 256
+    layers: 12
+    vocab_size: 49408
   loss: 
     Classification: True
+    TextContrastive: True
 
 Training:
-  epochs: 512
-  lr: 0.004
-  options: [verbose, distributed]
+  epochs: 1024
