Fix box visualization.

--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,5 @@ visualization/
 **commands.txt
 ops/GeometricSelectiveSearch/gss/computed_proposal_scannet
 dataset/ScanNet/scannet_all_points
+ops/GeometricSelectiveSearch/gss/visualization
+ops/GeometricSelectiveSearch/gss/aggregated_data
